--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,7 +28,9 @@
   }
 }
 // Reference: https://css-tricks.com/snippets/sass/mixin-prefix-properties/
-// ========== Reference: 80-character line =====================================
+// =============================================================================
+// ========== MAIN (S)CSS ======================================================
+// =============================================================================
 * { box-sizing: border-box; }
 :root { // remember to set fallbacks when custom properties are applied (for IE)
   --wPanelWallet: 30ch;
@@ -58,6 +60,77 @@ body, p, ul { // consider using Autoprefixer, e.g. might need for transform
 p { padding: var(--padDefaultFull, 1em); }
 // ul { overflow-x: auto; overflow-y: hidden; text-overflow: ellipsis; } // ?
 [title], label { cursor: pointer; }
+// ========== GENERIC DOCUMENT-LEVEL RESETS ABOVE THIS LINE ====================
+.clearfix::after {
+  content: '';
+  clear: both;
+  display: table;
+}
+// Accordion (vertical) ... potential for a mixin (?)
+.acc::before { float: left; }
+.acc::after { float: right; }
+.acc::before, .acc::after { content: '\27A4'; }
+:not(:checked) ~ .acc::before, :not(:checked) ~ .acc::after {
+  @include prefixS(transform, rotate(90deg), webkit moz ms o);
+}
+:checked ~ .acc::before, :checked ~ .acc::after {
+  @include prefixS(transform, rotate(-90deg), webkit moz ms o);
+}
+// input[type=checkbox] { // boolean only (for on/off switches)
+//   display: none; // hides checkboxes
+//   &:not(:checked) ~ _____ { display: none; } // not checked = shut
+//   &:checked ~ _____ { display: _____block; } // checked = open
+// } // use radio for relatively equivalent or matter-of-preference options
+// ========== LOW-SPECIFICITY COMPONENTS ABOVE THIS LINE =======================
+.panel {
+  border: inherit; // must pass through for .btn to inherit (?)
+  height: inherit; // same as 100%
+  overflow: auto; // maybe make the scroll bar skinnier as an enhancement
+  input[type=checkbox] {
+    display: none; // hides checkboxes
+    &:not(:checked) ~ form { display: none; } // not checked = shut
+    &:checked ~ form { display: block; } // checked = open
+  }
+  .btn, form {
+    display: block;
+    margin:  var(--padDefaultFull, 1em);
+    border:  inherit;
+    border-radius: var(--padDefaultSplit, 0.5em);
+  }
+  .btn {
+    padding: var(--padDefaultSplit, 0.5em);
+    background-color: white;
+    text-align: center;
+  }
+  form { padding: var(--padDefaultSplit, 0.5em); }
+  table { border-spacing: var(--padDefaultSplit, 0.5em); }
+  td { white-space: nowrap; }
+  td:nth-of-type(2) { text-align: right; }
+  input[type=text] { width: 100%; }
+  button.nxt, button.bck {
+    margin: 0.5em 1ch; // fallback
+    margin: calc(var(--padTopBot)/2) calc(var(--padLftRgt)/2);
+  }
+  button.nxt::after, button.bck::before {
+    content: ' \27A4';
+    display: inline-block;
+  }
+  button.nxt {
+    float: right;
+    &::after { margin-left: 1ch; }
+  }
+  button.bck {
+    float: left;
+    &::before { margin-right: 1ch;
+      @include prefixS(transform, rotate(180deg), webkit moz ms o);
+    }
+  }
+  input[type=submit] {
+    margin: 0.5em auto; // fallback
+    margin: calc(var(--padTopBot)/2) auto; // center horiz
+  } 
+}
+// ========== MODERATE-SPECIFICITY COMPONENTS ABOVE THIS LINE ==================
 #settings, #publayer, #dresserLft, #dresserRgt { position: fixed; }
 #settings {
   &.togSettingsRad1 { top: 0; }
@@ -187,70 +260,3 @@ p { padding: var(--padDefaultFull, 1em); }
 #beacon .panel { width: var(--wPanelBeacon); }
 #itts   .panel { width: var(--wPanelITTs); }
 #pois   .panel { width: var(--wPanelPOIs); }
-.panel {
-  border: inherit; // must pass through for .btn to inherit (?)
-  height: inherit; // same as 100%
-  input[type=checkbox] {
-    display: none; // hides checkboxes
-    &:not(:checked) ~ form { display: none; } // not checked = shut
-    &:checked ~ form { display: block; } // checked = open
-  }
-  .btn, form {
-    display: block;
-    margin:  var(--padDefaultFull, 1em);
-    border:  inherit;
-    border-radius: var(--padDefaultSplit, 0.5em);
-  }
-  .btn {
-    padding: var(--padDefaultSplit, 0.5em);
-    background-color: white;
-    text-align: center;
-  }
-  form { padding: var(--padDefaultSplit, 0.5em); }
-  table { border-spacing: var(--padDefaultSplit, 0.5em); }
-  td { white-space: nowrap; }
-  td:nth-of-type(2) { text-align: right; }
-  input[type=text] { width: 100%; }
-  button.nxt, button.bck {
-    margin: 0.5em 1ch; // fallback
-    margin: calc(var(--padTopBot)/2) calc(var(--padLftRgt)/2);
-  }
-  button.nxt::after, button.bck::before {
-    content: ' \27A4';
-    display: inline-block;
-  }
-  button.nxt {
-    float: right;
-    &::after { margin-left: 1ch; }
-  }
-  button.bck {
-    float: left;
-    &::before { margin-right: 1ch;
-      @include prefixS(transform, rotate(180deg), webkit moz ms o);
-    }
-  }
-  input[type=submit] {
-    margin: 0.5em auto; // fallback
-    margin: calc(var(--padTopBot)/2) auto; // center horiz
-  } 
-}
-// Accordion (vertical) ... potential for a mixin (?)
-.acc::before { float: left; }
-.acc::after { float: right; }
-.acc::before, .acc::after { content: '\27A4'; }
-:not(:checked) ~ .acc::before, :not(:checked) ~ .acc::after {
-  @include prefixS(transform, rotate(90deg), webkit moz ms o);
-}
-:checked ~ .acc::before, :checked ~ .acc::after {
-  @include prefixS(transform, rotate(-90deg), webkit moz ms o);
-}
-// input[type=checkbox] { // boolean only (for on/off switches)
-//   display: none; // hides checkboxes
-//   &:not(:checked) ~ _____ { display: none; } // not checked = shut
-//   &:checked ~ _____ { display: _____block; } // checked = open
-// } // use radio for relatively equivalent or matter-of-preference options
-.clearfix::after {
-  content: '';
-  clear: both;
-  display: table;
-}
