--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,7 @@
 // =============================================================================
 * { box-sizing: border-box; }
 :root { // remember to set fallbacks when custom properties are applied (for IE)
-  --wPanelWallet: 30ch;
+  --wPanelWallet: 45ch;
   --wPanelBeacon: 40ch;
   --wPanelITTs:   45ch;
   --wPanelPOIs:   35ch;
@@ -104,14 +104,15 @@ p { padding: var(--padDefaultFull, 1em); }
   }
   form { padding: var(--padDefaultSplit, 0.5em); }
   table { border-spacing: var(--padDefaultSplit, 0.5em); }
+  table select { width: 100%; }
   td { white-space: nowrap; }
   td:nth-of-type(2) { text-align: right; }
   input[type=text] { width: 100%; }
-  button.nxt, button.bck {
+  button.nxt, button.prv {
     margin: 0.5em 1ch; // fallback
     margin: calc(var(--padTopBot)/2) calc(var(--padLftRgt)/2);
   }
-  button.nxt::after, button.bck::before {
+  button.nxt::after, button.prv::before {
     content: ' \27A4';
     display: inline-block;
   }
@@ -119,7 +120,7 @@ p { padding: var(--padDefaultFull, 1em); }
     float: right;
     &::after { margin-left: 1ch; }
   }
-  button.bck {
+  button.prv {
     float: left;
     &::before { margin-right: 1ch;
       @include prefixS(transform, rotate(180deg), webkit moz ms o);
@@ -256,7 +257,7 @@ p { padding: var(--padDefaultFull, 1em); }
     li.endRgt { float: right; }
   }
 }
-#wallet .panel { width: var(--wPanelWallet); }
-#beacon .panel { width: var(--wPanelBeacon); }
-#itts   .panel { width: var(--wPanelITTs); }
-#pois   .panel { width: var(--wPanelPOIs); }
+#wallet .panel { max-width: var(--wPanelWallet); }
+#beacon .panel { max-width: var(--wPanelBeacon); }
+#itts   .panel { max-width: var(--wPanelITTs); }
+#pois   .panel { max-width: var(--wPanelPOIs); }
