--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,21 +1,6 @@
-
-
-header {
-  top:0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-.article{
-  margin-left: 1
-}
-
-footer{
-  position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;
+body{
+  display: grid;
+    grid-template-columns: 200px 1fr 200px;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
 }
